# wasm_wgpu_template

./: Cargo.toml
src/: lib.rs  main.rs
www/: index.html  index.js  package-lock.json  package.json  vite.config.js
