[package]
name = "wasm_wgpu_template"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]
 

[dependencies]
cfg-if = "1"

wgpu = "0.16.1"
winit = "0.28.6"
env_logger = "0.10"
log = "0.4"
pollster = "0.3"
bytemuck = { version = "1.12", features = [ "derive" ] }
anyhow = "1.0"
cgmath = "0.18"


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
wgpu = { version = "0.16.1", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
 